<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cbwtf.activities.CbwtfLoginActivity">

    <ImageView
        android:id="@+id/cbwtf_login_bottom_img"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <androidx.core.widget.NestedScrollView
        app:layout_constrainedHeight="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/cbwtf_login_header_img"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/image_description" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="40dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/app_color_dark"
                app:hintTextColor="@color/app_color_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cbwtf_login_mobile_et"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:hint="@string/mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/app_color_dark"
                app:hintTextColor="@color/app_color_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cbwtf_login_password_et"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:textStyle="bold"
                android:id="@+id/cbwtf_login_button"
                android:text="@string/login"
                app:cornerRadius="8dp"
                android:backgroundTint="@color/app_color_dark"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/cbwtf_guideline_link_tv"
                android:textStyle="bold"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                android:text="@string/u_guidelines_of_cpcb_and_bmwm_rules_u"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/cbwtf_youtube_link_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone"
                android:text="@string/how_it_works"
                android:gravity="center"
                android:drawablePadding="5dp"
                app:drawableTint="@android:color/holo_red_light"
                app:drawableStartCompat="@drawable/ic_baseline_smart_display_24" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>