<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ReportsFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/report_appbar"
        android:background="@color/app_color_dark"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:elevation="4dp"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/report_back_button"
            app:tint="@color/white"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/reports"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <View
            android:layout_width="50dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <androidx.appcompat.widget.SearchView
        android:layout_margin="5dp"
        android:background="@drawable/bg_et"
        app:iconifiedByDefault="false"
        app:queryHint="Search hospital name"
        android:id="@+id/report_search_bar"
        app:layout_constraintTop_toBottomOf="@id/report_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--<View
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/report_appbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>-->

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_report"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtFromDate"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/report_shimmer_layout"/>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <ImageView
        android:id="@+id/imgFromDate"
        android:contentDescription="@string/image_description"
        android:src="@drawable/calendar"
        android:layout_width="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtFromDate"
        app:layout_constraintBottom_toBottomOf="@id/txtFromDate"
        android:layout_height="20dp">
    </ImageView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtFromDate"
        app:layout_constraintStart_toEndOf="@+id/imgFromDate"
        android:layout_width="wrap_content"
        android:text="@string/from_date"
        android:textColor="#3E3C3C"
        android:textSize="13sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/report_search_bar"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatTextView>

    <ImageView
        android:id="@+id/imgToDate"
        android:contentDescription="@string/image_description"
        android:src="@drawable/calendar"
        android:layout_width="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/txtFromDate"
        app:layout_constraintTop_toTopOf="@id/txtFromDate"
        app:layout_constraintBottom_toBottomOf="@id/txtFromDate"
        android:layout_height="20dp">
    </ImageView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtToDate"
        app:layout_constraintStart_toEndOf="@+id/imgToDate"
        android:layout_width="wrap_content"
        android:text="@string/to_date"
        android:textColor="#4A4848"
        android:textSize="13sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/report_search_bar"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatTextView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btGetPDF"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/txtToDate"
        app:layout_constraintTop_toTopOf="@+id/txtToDate"
        app:layout_constraintEnd_toStartOf="@+id/imgSend"
        android:backgroundTint="@color/app_color_dark"
        android:layout_width="wrap_content"
        android:layout_marginEnd="20dp"
        android:enabled="false"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgSend"
        android:layout_width="wrap_content"
        android:src="@drawable/baseline_send_24"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/txtToDate"
        app:layout_constraintTop_toTopOf="@+id/txtToDate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatImageView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/report_rv_1"
        app:layout_constrainedHeight="true"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btGetPDF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:visibility="gone"
        android:drawablePadding="10dp"
        android:text="@string/no_reports_found"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/report_empty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/ic_baseline_assignment_24" />

</androidx.constraintlayout.widget.ConstraintLayout>